2009-12-05  Carles Pina i Estany  <carles@pina.cat>

	* gettext/gettext.c (grub_gettext_init_ext): Replace grub_printf with
	grub_dprintf.

2009-12-05  Robert Millan  <rmh.grub@aybabtu.com>

	* kern/ieee1275/openfw.c (grub_reboot): Disable for i386.  The
	non-firmware-dependant one in realmode.S takes precedence.

2009-12-04  Robert Millan  <rmh.grub@aybabtu.com>

	* commands/halt.c: Replace misc arch-specific headers with
	`<grub/misc.h>'.
	* commands/reboot.c: Likewise.
	* commands/i386/pc/halt.c: Replace `<grub/machine/init.h>' with
	`<grub/misc.h>'.
	* conf/i386-coreboot.rmk (kernel_img_HEADERS): Remove `cpu/reboot.h'.
	(halt_mod_SOURCES): Move `kern/i386/halt.c' from here ...
	(kernel_img_SOURCES): ... to here.

	* include/grub/efi/efi.h (grub_reboot, grub_halt): Remove prototypes.
	* include/grub/i386/pc/init.h: Likewise.
	* include/grub/powerpc/ieee1275/kernel.h: Likewise.
	* include/grub/sparc64/ieee1275/kernel.h: Likewise.

	* include/grub/misc.h (grub_reboot, grub_halt): New prototypes.

	* include/grub/i386/halt.h: Remove.
	* include/grub/i386/reboot.h: Likewise.

	* kern/i386/halt.c: Remove `<grub/cpu/halt.h>'.

2009-12-03  David S. Miller  <davem@sunset.davemloft.net>

	* conf/sparc64-ieee1275.rmk (grub_mkimage_SOURCES,
	grub_setup_SOURCES, grub_ofpathname_SOURCES): Add gnulib/progname.c
	* util/sparc64/ieee1275/grub-mkimage.c: Include <grub/i18n.h> and
	"progname.h"
	* util/sparc64/ieee1275/grub-ofpathname.c: Likewise.
	* util/sparc64/ieee1275/grub-setup.c: Likewise.
	(usage): Add missing comma in printf.

2009-12-02  Robert Millan  <rmh.grub@aybabtu.com>

	Use the same reboot approach on i386 coreboot and qemu as we do on
	BIOS.

	* conf/i386-coreboot.rmk (kernel_img_HEADERS): Add `cpu/reboot.h'.
	(reboot_mod_SOURCES): Remove `kern/i386/reboot.c'.
	* kern/i386/reboot.c: Remove.
	* include/grub/i386/reboot.h (grub_reboot): Export function.
	* kern/i386/pc/startup.S (grub_reboot): Move from here ...